# FEM_1D

./: CMakeCache.txt  CMakeLists.txt  Makefile  PlotFEM.py  cmake_install.cmake
Modules/: FindLAPACKE.cmake  FindLAPACKEXT.cmake
data/: AVX_Vectorization_Report_FEM_Prime.txt
inc/: matrix_utils.h  phi_functs.h
src/: fem.c  matrix_utils.c  phi_functs.c
